--- a/styles/main.css
+++ b/styles/main.css
@@ -74,15 +74,14 @@
 	padding: 0 10px 10px 10px;
 	margin-top: -12px;
 	border-radius: 5px;
-	margin-top: -12px;
 	
 	transition-timing-function:linear;
 	-webkit-transition-timing-function:linear;
 	transition-timing-function:linear;
 	
 	-webkit-transition: all 0.6s ease;
-    -moz-transition:    all 0.6s ease;
-    -o-transition:      all 0.6s ease;
+        -moz-transition:    all 0.6s ease;
+        -o-transition:      all 0.6s ease;
 }
 
 .encapsule:hover{	
@@ -223,12 +222,23 @@ form input{
 	border: 1px solid #04a4cc;
 	border-radius: 5px;
 	margin-top: 10px;
+	
+	transition-timing-function:linear;
+        -webkit-transition-timing-function:linear;
+        transition-timing-function:linear;
+
+        -webkit-transition: all 0.4s ease;
+        -moz-transition:    all 0.4s ease;
+        -o-transition:      all 0.4s ease;
+
 }
 
 form input:focus{
-	-webkit-box-shadow: 0 0 3px 0 #0972A5;
-	-moz-box-shadow: 0 0 3px 0 #0972A5;
-	box-shadow: 0 0 3px 0 #0972A5;
+    webkit-transition: all 0.4s ease;
+    -moz-transition:    all 0.4s ease;
+    -o-transition:      all 0.4s ease;
+
+    -webkit-box-shadow: 0 0 3px 0 #0972A5;
+    -moz-box-shadow: 0 0 3px 0 #0972A5;
+    box-shadow: 0 0 3px 0 #0972A5;
 }
-
-
