--- a/styles/main.css
+++ b/styles/main.css
@@ -36,7 +36,7 @@
 }
 
 #menuBar td{
-	width: 300px;
+	width: 320px;
 	height: 35px;
 	font-size: 18px;
 	text-align: center;
@@ -212,7 +212,7 @@ button:active{
 	box-shadow: inset 0 6px 6px -6px #303030;
 }
 
-form input{
+input{
 	width: 200px;
 	height: 25px;
 	font-size: 16px;
@@ -233,7 +233,7 @@ form input{
 
 }
 
-form input:focus{
+input:focus{
     webkit-transition: all 0.4s ease;
     -moz-transition:    all 0.4s ease;
     -o-transition:      all 0.4s ease;
