--- a/styles/main.css
+++ b/styles/main.css
@@ -234,18 +234,20 @@ input{
 }
 
 input[type=search] {
+    width: 35px;
     color: #0972A5;
-    padding-left: 25px;
+    padding-left: 30px;
     text-align: left;
     cursor: pointer;
-    height: 27px;
+    height: 24px;
     background: url(../images/search.jpg) top left no-repeat;
-    letter-spacing: 1px;
-    text-shadow: 0 0 1px black;
+    letter-spacing: 3px;
+    text-shadow: 0 1px 1px black;
 }
 
 
-input:focus{
+input[type=search]:focus{
+	width: 200px;	
     webkit-transition: all 0.4s ease;
     -moz-transition:    all 0.4s ease;
     -o-transition:      all 0.4s ease;
@@ -253,6 +255,33 @@ input:focus{
     -webkit-box-shadow: 0 0 3px 0 #0972A5;
     -moz-box-shadow: 0 0 3px 0 #0972A5;
     box-shadow: 0 0 3px 0 #0972A5;
+}
+
+#searchDiv {
+	width: 300px;
+	height: 400px;
+	border: 1px solid black;
+	border-radius: 5px;
+	padding: 0 10px 10px 10px ;
+	margin: 30px 0 0 50px;
+	float:left;
+	overflow: auto;
+}
+
+#searchDiv h2{
+	width: 300px;
+	padding: 0;
+}
+
+#msg{
+	font-size: 13px;
+	text-align: center;
+	margin-top: 20px;
+}
+
+#search-result{
+	margin: 30px;
+	text-align: left;
 }
 
 #notifications ul{
@@ -273,6 +302,7 @@ input:focus{
 }
 
 #notifications .reject{
+	border-color: #E66140;
     background-color: #E66140;
 }
 
