--- a/styles/main.css
+++ b/styles/main.css
@@ -234,14 +234,15 @@ input{
 }
 
 input[type=search] {
-    width: 35px;
+    width: 60px;
     color: #0972A5;
+    font-family: Segoe UI;
     padding-left: 30px;
     text-align: left;
     cursor: pointer;
     height: 24px;
     background: url(../images/search.jpg) top left no-repeat;
-    letter-spacing: 3px;
+    letter-spacing: 2px;
     text-shadow: 0 1px 1px black;
 }
 
@@ -262,15 +263,16 @@ input[type=search]:focus{
 	height: 400px;
 	border: 1px solid black;
 	border-radius: 5px;
-	padding: 0 10px 10px 10px ;
+	padding: 0 0px 10px 0px ;
 	margin: 30px 0 0 50px;
 	float:left;
 	overflow: auto;
 }
 
 #searchDiv h2{
-	width: 300px;
+	width: 295px;
 	padding: 0;
+	margin: 10px 2px;
 }
 
 #msg{
