--- a/styles/main.css
+++ b/styles/main.css
@@ -337,7 +337,7 @@ a, a:visited {
     color: #04a4cc;
     font-weight: bold;
 }
-.roomNo{
+.roomNoAvailable{
 	float: left;
 	margin: 1px; 
 	width: 40px; 
@@ -349,6 +349,23 @@ a, a:visited {
 	color: white;
 }
 
-.roomNo:hover{
+.roomNoAvailable:hover{
     background-color: #034b6e;
 }
+
+.roomNoUnavailable{
+        float: left;
+        margin: 1px;
+        width: 40px;
+        border: 1px solid black;
+        border-radius: 2px;
+        padding: 4px;
+        cursor: pointer;
+        background-color: #034b63;/*#034b6e;*/
+        color: white;
+}
+
+.roomNoUnavailable:hover{
+    background-color: #0972A5;
+}
+
